crates/client/tests/snapshots/render__minimized_floating_window_is_not_drawn.snap
---
source: crates/client/tests/render.rs
expression: "fixture.render(Size::new(80, 24))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "╭──────────────────────────────────────╮╭──────────────────────────────────────╮",
        "│left side of the screen               ││right side of the screen              │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "╰──────────────────────────────────────╯╰──────────────────────────────────────╯",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 6, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 6, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 7, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 7, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 9, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 9, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 10, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 10, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 11, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 11, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 12, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 12, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 13, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 13, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 14, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 14, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 15, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 15, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 16, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 16, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 17, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 17, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 18, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 18, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 19, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 19, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 20, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 20, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 21, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 21, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 22, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 22, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 23, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
cursor: Some(Position { x: 24, y: 1 })
